--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
   author: Marvin Pinto
   description: |
-    Ansible Galaxy role to build and manage a sample Home Theatre PC (HTPC) setup.
+    This is an Ansible Galaxy meta-role of sorts to install and manage a sample Home Theatre PC (HTPC) setup.
   license: MIT
   min_ansible_version: 2.0
   platforms:
