Setup and configure nginx proxying + Google authentication

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -22,5 +22,21 @@ dependencies:
   - marvinpinto.sickrage
   - marvinpinto.couchpotato
   - marvinpinto.plex
-  - marvinpinto.nginx
-  - 'marvinpinto.oauth2-proxy'
+
+  - role: 'marvinpinto.nginx'
+    nginx_static_html_directory: '{{ htpc_nginx_static_html_directory }}'
+    nginx_config_file: '{{ htpc_nginx_config_file }}'
+
+  - role: 'marvinpinto.oauth2-proxy'
+    oauth2_proxy_cli_args: >-
+      --upstream="http://127.0.0.1:81/"
+      --cookie-secret="{{ htpc_oauth_cookie_secret }}"
+      --cookie-secure="true"
+      --cookie-expire="0h30m0s"
+      --cookie-refresh="0h5m0s"
+      --client-id="{{ htpc_oauth_client_id }}"
+      --client-secret="{{ htpc_oauth_client_secret }}"
+      --provider="google"
+      --redirect-url="https://{{ htpc_dns_hostname }}/oauth2/callback"
+      --request-logging="false"
+      --authenticated-emails-file=/etc/oauth2_proxy_authorized_users
