--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -179,3 +179,214 @@ htpc_nginx_config_file: |
       }
 
   }
+
+
+htpc_nzbtomedia_configuration: |
+  # nzbToMedia Configuration
+  # For more information, visit https://github.com/clinton-hall/nzbToMedia/wiki
+
+  [General]
+      # Enable/Disable update notifications
+      version_notify = 0
+      # Enable/Disable automatic updates
+      auto_update = 0
+      # Set to the full path to the git executable
+      git_path =
+      # GitHUB user for repo
+      git_user =
+      # GitHUB branch for repo
+      git_branch =
+      # Enable/Disable forceful cleaning of leftover files following postprocess
+      force_clean = 1
+      # Enable/Disable logging debug messages to nzbtomedia.log
+      log_debug = 0
+      # Enable/Disable logging database messages to nzbtomedia.log
+      log_db = 0
+      # Enable/Disable logging environment variables to debug nzbtomedia.log (helpful to track down errors calling external tools.)
+      log_env = 0
+      # Enable/Disable logging git output to debug nzbtomedia.log (helpful to track down update failures.)
+      log_git = 0
+      # Set to the directory where your ffmpeg/ffprobe executables are located
+      ffmpeg_path =
+      # Enable/Disable media file checking using ffprobe.
+      check_media = 1
+      # Enable/Disable a safety check to ensure we don't process all downloads in the default_downloadDirectories by mistake.
+      safe_mode = 1
+
+  [Posix]
+      ### Process priority setting for External commands (Extractor and Transcoder) on Posix (Unix/Linux/OSX) systems.
+      # Set the Niceness value for the nice command. These range from -20 (most favorable to the process) to 19 (least favorable to the process).
+      niceness = 0
+      # Set the ionice scheduling class. 0 for none, 1 for real time, 2 for best-effort, 3 for idle.
+      ionice_class = 0
+      # Set the ionice scheduling class data. This defines the class data, if the class accepts an argument. For real time and best-effort, 0-7 is valid data.
+      ionice_classdata = 0
+
+  [CouchPotato]
+      #### autoProcessing for Movies
+      #### movies - category that gets called for post-processing with CPS
+      [[movies]]
+          enabled = 1
+          apikey =
+          host = localhost
+          port = 5050
+          ###### ADVANCED USE - ONLY EDIT IF YOU KNOW WHAT YOU'RE DOING ######
+          ssl = 0
+          web_root =
+          # Enable/Disable linking for Torrents
+          Torrent_NoLink = 0
+          keep_archive = 1
+          method = renamer
+          delete_failed = 0
+          wait_for = 2
+          extract = 1
+          # Set this to minimum required size to consider a media file valid (in MB)
+          minSize = 0
+          # Enable/Disable deleting ignored files (samples and invalid media files)
+          delete_ignored = 0
+          ##### Enable if Couchpotato is on a remote server for this category
+          remote_path = 0
+          ##### Set to path where download client places completed downloads locally for this category
+          watch_dir =
+
+  [SickBeard]
+      #### autoProcessing for TV Series
+      #### tv - category that gets called for post-processing with SB
+      [[tv]]
+          enabled = 1
+          host = 127.0.0.1
+          port = 8081
+          username =
+          password =
+          ###### ADVANCED USE - ONLY EDIT IF YOU KNOW WHAT YOU'RE DOING ######
+          web_root =
+          ssl = 0
+          fork = auto
+          delete_failed = 0
+          # Enable/Disable linking for Torrents
+          Torrent_NoLink = 0
+          keep_archive = 1
+          process_method =
+          # force processing of already processed content when running a manual scan.
+          force = 0
+          # tell SickRage to delete all source files after processing.
+          delete_on = 0
+          extract = 1
+          nzbExtractionBy = Downloader
+          # Set this to minimum required size to consider a media file valid (in MB)
+          minSize = 0
+          # Enable/Disable deleting ignored files (samples and invalid media files)
+          delete_ignored = 0
+          ##### Enable if SickBeard is on a remote server for this category
+          remote_path = 0
+          ##### Set to path where download client places completed downloads locally for this category
+          watch_dir =
+
+  [Nzb]
+      ###### clientAgent - Supported clients: sabnzbd, nzbget
+      clientAgent = sabnzbd
+      ###### SabNZBD (You must edit this if your using nzbToMedia.py with SabNZBD)
+      sabnzbd_host = http://127.0.0.1
+      sabnzbd_port = 8080
+      sabnzbd_apikey =
+      ###### Enter the default path to your default download directory (non-category downloads). this directory is protected by safe_mode.
+      default_downloadDirectory = /opt/downloads/misc/
+
+  [Extensions]
+      compressedExtensions = .zip,.rar,.7z,.gz,.bz,.tar,.arj,.1,.01,.001
+      mediaExtensions = .mkv,.avi,.divx,.xvid,.mov,.wmv,.mp4,.mpg,.mpeg,.vob,.iso,.m4v,.ts
+      audioExtensions = .mp3, .aac, .ogg, .ape, .m4a, .asf, .wma, .flac
+      metaExtensions = .nfo,.sub,.srt,.jpg,.gif
+
+  [Plex]
+      # Only enter these details if you want to update plex library after processing.
+      # Do not enter these details if you send the plex notifications from Sickbeard/CouchPotato.
+      plex_host = localhost
+      plex_port = 32400
+      plex_token =
+      plex_ssl = 0
+      # Enter Plex category to section mapping as Category,section and separate each pair with '|'
+      # e.g. plex_sections = movie,3|tv,4
+      plex_sections =
+
+  [Transcoder]
+      # getsubs. enable to download subtitles.
+      getSubs = 1
+      # subLanguages. create a list of languages in the order you want them in your subtitles.
+      subLanguages = eng
+      # transcode. enable to use transcoder
+      transcode = 1
+      ###### duplicate =1 will create a new file. =0 will replace the original
+      duplicate = 1
+      # concat. joins cd1 cd2 etc into a single video.
+      concat = 1
+      # IgnoreExtensions is a comma-separated list of extensions that will not be transcoded.
+      ignoreExtensions = .mp4
+      # outputFastStart. 1 will use -movflags + faststart. 0 will disable this from being used.
+      outputFastStart = 0
+      # outputQualityPercent. used as -q:a value. 0 will disable this from being used.
+      outputQualityPercent = 0
+      # outputVideoPath. Set path you want transcoded videos moved to. Leave blank to disable.
+      outputVideoPath =
+      # processOutput. 1 will send the outputVideoPath to SickBeard/CouchPotato. 0 will send original files.
+      processOutput = 0
+      # audioLanguage. set the 3 letter language code you want as your primary audio track.
+      audioLanguage = eng
+      # allAudioLanguages. 1 will keep all audio tracks (uses AudioCodec3) where available.
+      allAudioLanguages = 0
+      # allSubLanguages. 1 will keep all existing sub languages. 0 will discard those not in your list above.
+      allSubLanguages = 0
+      # embedSubs. 1 will embed external sub/srt subs into your video if this is supported.
+      embedSubs = 1
+      # burnInSubtitle. burns the default sub language into your video (needed for players that don't support subs)
+      burnInSubtitle = 0
+      # extractSubs. 1 will extract subs from the video file and save these as external srt files.
+      extractSubs = 0
+      # externalSubDir. set the directory where subs should be saved (if not the same directory as the video)
+      externalSubDir =
+      # hwAccel. 1 will set ffmpeg to enable hardware acceleration (this requires a recent ffmpeg)
+      hwAccel = 1
+      # generalOptions. Enter your additional ffmpeg options here with commas to separate each option/value (i.e replace spaces with commas).
+      generalOptions =
+      # outputDefault. Loads default configs for the selected device. The remaining options below are ignored.
+      # If you want to use your own profile, leave this blank and set the remaining options below.
+      # outputDefault profiles allowed: iPad, iPad-1080p, iPad-720p, Apple-TV2, iPod, iPhone, PS3, xbox, Roku-1080p, Roku-720p, Roku-480p, mkv, mp4-scene-release
+      outputDefault =
+      #### Define custom settings below.
+      outputVideoExtension = .mp4
+      outputVideoCodec = libx264
+      VideoCodecAllow =
+      outputVideoPreset = medium
+      outputVideoResolution = 1920:1080
+      outputVideoFramerate = 24
+      outputVideoBitrate = 800000
+      outputVideoCRF = 19
+      outputVideoLevel = 3.1
+      outputAudioCodec = ac3
+      AudioCodecAllow =
+      outputAudioChannels = 6
+      outputAudioBitrate = 640k
+      outputAudioTrack2Codec = libfaac
+      AudioCodec2Allow =
+      outputAudioTrack2Channels = 2
+      outputAudioTrack2Bitrate = 128000
+      outputAudioOtherCodec = libmp3lame
+      AudioOtherCodecAllow =
+      outputAudioOtherChannels =
+      outputAudioOtherBitrate = 128000
+      outputSubtitleCodec =
+
+  [ASCII]
+      #Set convert =1 if you want to convert any "foreign" characters to ASCII (UTF8) before passing to SB/CP etc. Default is disabled (0).
+      convert = 1
+
+  [passwords]
+      # enter the full path to a text file containing passwords to be used for extraction attempts.
+      # In the passwords file, every password should be on a new line
+      PassWordFile =
+
+  [Custom]
+      # enter a list (comma separated) of Group Tags you want removed from filenames to help with subtitle matching.
+      # e.g remove_group = [rarbag],-NZBgeek
+      # be careful if your "group" is a common "real" word. Please report if you have any group replacements that would fall in this category.
+      remove_group =
