--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -60,6 +60,7 @@
     mode: '0775'
   with_items:
     - 'sabnzbd-config'
+    - 'sickrage-config'
 
 - name: 'Create the /opt/downloads directory'
   file:
