--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -61,6 +61,7 @@
   with_items:
     - 'sabnzbd-config'
     - 'sickrage-config'
+    - 'couchpotato-config'
 
 - name: 'Create the /opt/downloads directory'
   file:
