--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -134,6 +134,11 @@ htpc_nginx_config_file: |
         keepalive 512;
       }
 
+      upstream plex {
+        server 127.0.0.1:32400;
+        keepalive 512;
+      }
+
       server {
         listen 80 default_server;
         server_name _;
@@ -171,6 +176,13 @@ htpc_nginx_config_file: |
 
         location /couchpotato {
           proxy_pass http://couchpotato;
+        }
+
+        location /web {
+          proxy_pass http://plex;
+          proxy_set_header Host localhost;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
 
         location / {
