Install the dependent Galaxy roles as part of the Travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
   - ansible --version
   - echo -e 'localhost ansible_connection=local' > tests/inventory
   - echo -e '[defaults]\nroles_path = ../:/opt/ansible_roles\nhostfile = ./tests/inventory' > ansible.cfg
+  - 'sudo ansible-galaxy install -r galaxy-roles.yml -p /opt/ansible_roles'
 
 script:
   - ansible-playbook --syntax-check tests/test.yml
