--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -97,3 +97,12 @@
     - 'tv'
     - 'movies'
     - 'misc'
+
+- name: 'Load the rsyslog imfile module'
+  lineinfile:
+    dest: '/etc/rsyslog.conf'
+    state: 'present'
+    regexp: '^\$ModLoad imfile'
+    line: '$ModLoad imfile'
+    insertbefore: '^\$IncludeConfig'
+  notify: 'restart-ansible-role-htpc-rsyslog'
