--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -72,7 +72,7 @@ htpc_nginx_config_file: |
   user root;
   worker_processes 1;
 
-  error_log /var/log/nginx/error.log warn;
+  error_log syslog:server=unix:/dev/log,facility=local7,tag=nginx,severity=warn;
   pid /var/run/nginx.pid;
 
   events {
@@ -110,7 +110,7 @@ htpc_nginx_config_file: |
       log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                         '$status $body_bytes_sent "$http_referer" '
                         '"$http_user_agent" "$http_x_forwarded_for"';
-      access_log off;
+      access_log syslog:server=unix:/dev/log,facility=local7,tag=nginx,severity=info;
       sendfile        on;
       keepalive_timeout  65;
 
