--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -139,6 +139,11 @@ htpc_nginx_config_file: |
         keepalive 512;
       }
 
+      upstream headphones {
+        server 127.0.0.1:8181;
+        keepalive 512;
+      }
+
       server {
         listen 80 default_server;
         server_name _;
@@ -180,6 +185,13 @@ htpc_nginx_config_file: |
 
         location /web {
           proxy_pass http://plex;
+          proxy_set_header Host localhost;
+          proxy_set_header X-Real-IP $remote_addr;
+          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
+        location /headphones {
+          proxy_pass http://headphones;
           proxy_set_header Host localhost;
           proxy_set_header X-Real-IP $remote_addr;
           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
