--- a/meta/main.yml
+++ b/meta/main.yml
@@ -17,6 +17,7 @@ galaxy_info:
     - plex
     - nginx
     - oauth2proxy
+    - headphones
 dependencies:
   - role: 'marvinpinto.sabnzbd'
     sabnzbd_nzbtomedia_autoprocessmedia_cfg: '{{ htpc_nzbtomedia_configuration }}'
@@ -48,3 +49,7 @@ dependencies:
 
   - role: 'marvinpinto.plex'
     plex_server_version: '1.1.4.2757-24ffd60'
+
+  - role: 'marvinpinto.headphones'
+    headphones_app_version: 'v0.5.16'
+    headphones_app_data_directory: '/opt/config/headphones-config'
