--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -98,6 +98,7 @@ htpc_nginx_config_file: |
       proxy_set_header X-Scheme $scheme;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header X-Forwarded-Proto https;
+      proxy_set_header X-Forwarded-Host $host;
       proxy_redirect  http://  $scheme://;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
