--- a/meta/main.yml
+++ b/meta/main.yml
@@ -49,10 +49,11 @@ dependencies:
 
   - role: 'marvinpinto.couchpotato'
     couchpotato_app_data_directory: '/opt/config/couchpotato-config'
+    couchpotato_app_version: '{{ htpc_couchpotato_app_version }}'
 
   - role: 'marvinpinto.plex'
-    plex_server_version: '1.1.4.2757-24ffd60'
+    plex_server_version: '{{ htpc_plex_server_version }}'
 
   - role: 'marvinpinto.headphones'
-    headphones_app_version: 'v0.5.16'
+    headphones_app_version: '{{ htpc_headphones_app_version }}'
     headphones_app_data_directory: '/opt/config/headphones-config'
